Update 클라우드 테스트 따라하기.md

--- a/Document/클라우드 테스트 따라하기.md
+++ b/Document/클라우드 테스트 따라하기.md
@@ -69,6 +69,6 @@ cd home/net6.0
 vi MyConfig.json  
 "Environment": "Development" -> "Production"  
 (../APIServer/appsettings.Production.json) 파일에 Redis, DB ip가 클라우드 환경에 맞게 세팅되어 있음.  
-"urls": "http://local:5000" -> 자유롭게 변경      
+"urls": "http://localhost:5000" -> 자유롭게 변경      
 - dotnet APIServer.dll   
 - dotnet APIServer.dll --urls "http://*:5000" (urls를 인자로 사용하면 기존의 conf가 오버라이드)  
