--- a/Document/클라우드 테스트 따라하기.md
+++ b/Document/클라우드 테스트 따라하기.md
@@ -9,9 +9,9 @@ sudo systemctl start docker
 
 # docker build  
 richard0326/robotmon-go-apiserver  
-ApiServer build할때 사용한 dockerfile (../Setting/apiserver/Dockerfile)  
+ApiServer build할때 사용한 dockerfile (https://github.com/richard0326/RobotMon-Go/blob/main/Setting/apiserver/Dockerfile)  
 richard0326/fluentd  
-Fluentd에 MySQL5.6.36 포함하여 build할때 사용한 dockerfile (../Setting/fluentdSettings/Dockerfile)  
+Fluentd에 MySQL5.6.36 포함하여 build할때 사용한 dockerfile (https://github.com/richard0326/RobotMon-Go/blob/main/Setting/fluentdSettings/Dockerfile)  
 
 # version
 OS  
@@ -31,8 +31,8 @@ sudo chmod -R  00777 "richard0326"
   
 2. mysql 사전 작업  
 mysql의 dump 파일을 미리 세팅해둔다.  
-인게임 정보에 대한 덤프 파일 (../Setting/mysql/DumpInGame_my5_6_36.sql)  
-로그에 대한 덤프 파일 (../Setting/mysql/DumpLog_my5_6_36.sql)  
+인게임 정보에 대한 덤프 파일 (https://github.com/richard0326/RobotMon-Go/blob/main/Setting/mysql/DumpInGame_my5_6_36.sql)  
+로그에 대한 덤프 파일 (https://github.com/richard0326/RobotMon-Go/blob/main/Setting/mysql/DumpLog_my5_6_36.sql)  
   
 3. fluentd 사전 작업  
 fluentd conf 파일을 미리 volume될 경로에 세팅해둔다.  
@@ -68,7 +68,7 @@ sudo docker exec -it apiserver /bin/bash
 cd home/net6.0  
 vi MyConfig.json  
 "Environment": "Development" -> "Production"  
-(../APIServer/appsettings.Production.json) 파일에 Redis, DB ip가 클라우드 환경에 맞게 세팅되어 있음.  
+(https://github.com/richard0326/RobotMon-Go/blob/main/APIServer/appsettings.Production.json) 파일에 Redis, DB ip가 클라우드 환경에 맞게 세팅되어 있음.  
 "urls": "http://localhost:5000" -> 자유롭게 변경      
 - dotnet APIServer.dll   
 - dotnet APIServer.dll --urls "http://*:5000" (urls를 인자로 사용하면 기존의 conf가 오버라이드)  
