Update 클라우드 테스트 따라하기.md

--- a/Document/클라우드 테스트 따라하기.md
+++ b/Document/클라우드 테스트 따라하기.md
@@ -77,3 +77,7 @@ vi MyConfig.json
 "urls": "http://localhost:5000" -> 자유롭게 변경      
 - dotnet APIServer.dll   
 - dotnet APIServer.dll --urls "http://*:5000" (urls를 인자로 사용하면 기존의 conf가 오버라이드)  
+
+# 테스트
+테스트는 메인 화면의 README.md를 참고하여 진행하면 좋을 것 같습니다.
+(https://github.com/richard0326/RobotMon-Go#readme)
